# ScienceTools-scons

./: SConstruct  allExternals.scons  packageList.txt  processExternals.scons
BackgroundEstimator/: BackgroundEstimatorLib.py  SConscript
BackgroundEstimator/BackgroundEstimator/: BKGE_Tools.h  BackgroundEstimator.h  BackgroundEstimator_ext.h  DurationEstimator.h  GANGSTER.h
BackgroundEstimator/data/: EastWest_Correction_P8R2_TRANSIENT100E_V6_2.0.root  Plots_P8R2_TRANSIENT100E_V6.root.REMOVED.git-id  RateFit_P8R2_TRANSIENT100E_V6_2.0.root  ThetaPhi_Fits_P8R2_TRANSIENT100E_V6_2.0.root
BackgroundEstimator/doc/: release.notes
BackgroundEstimator/python/: BKGE_interface.py
BackgroundEstimator/src/: LinkDef.h
BayesianBlocks/: SConscript
Doxygen/: Default
Likelihood/: LikelihoodLib.py  SConscript
SolarSystemTools/: SConscript  SolarSystemToolsLib.py
astro/: SConscript
astro/astro/: GPS.h  (+20 more)
burstFit/: SConscript
catalogAccess/: SConscript
dataSubselector/: SConscript  dataSubselectorLib.py
embed_python/: SConscript  embed_pythonLib.py
evtUtils/: SConscript  evtUtilsLib.py
evtbin/: SConscript  evtbinLib.py
facilities/: Makefile.am  SConscript  acinclude.m4  configure.in  facilitiesLib.py  version.cxx
facilities/facilities/: Clock.h  Makefile.am  ScheduledEvent.h  Scheduler.h  Timestamp.h  bitmanip.h
facilities/src/: Makefile.am  Timestamp.cxx  Util.cxx
facilities/src/test/: test_time.cxx
fitsGen/: SConscript  fitsGenLib.py
flux/: SConscript  fluxLib.py
healpix/: SConscript  healpixLib.py
hoops/: SConscript
likeGui/: SConscript
map_tools/: SConscript  map_toolsLib.py
observationSim/: SConscript
orbitSim/: SConscript
periodSearch/: SConscript
pgwave/: SConscript  pgwaveLib.py
pointlike/: SConscript  pointlikeLib.py
pulsarDb/: SConscript
pulsePhase/: SConscript  pulsePhaseLib.py
pyBurstAnalysisGUI/: SConscript
pyExposure/: SConscript  pyExposureLib.py
pyLikelihood/: SConscript
rspgen/: SConscript
shellscripts/: pfiles_setup.sh
sourceIdentify/: SConscript
st_app/: SConscript  st_appLib.py
st_facilities/: SConscript  st_facilitiesLib.py
st_stream/: SConscript  st_streamLib.py
timeSystem/: SConscript
xmlBase/: SConscript  xmlBaseLib.py
(+1424 files in other folders)
