## Process this file with automake to produce Makefile.in
#
# $Id$
#
# Author: Paul_Kunz@slac.stanford.edu
#

# The following set,  else would follow GNU conventions
AUTOMAKE_OPTIONS = foreign

facilitiesincludedir = $(includedir)/facilities

facilitiesinclude_HEADERS = \
	Adapter.h        \
	Clock.h          \
	Commissioner.h   \
	Converter.h      \
	FIFO.h           \
	Observer.h       \
	ScheduledEvent.h \
	Scheduler.h      \
	Utility.h        \
	binarystream.h   \
	bitmanip.h       \
	bpkt_streams.h   \
	error.h          \
	filemap.h
